[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/UI/ui_resources/Panel9Frame.tres" type="StyleBox" id=1]
[ext_resource path="res://source/UI/CreditsContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/UI/ui_resources/defaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://source/UI/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://source/UI/elements/ButtonWithSfx.gd" type="Script" id=5]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dim" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.117647 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.235294, 0.298039, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenuContainer" type="MarginContainer" parent="." groups=["PauseMenu", "UI"]]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 165
custom_constants/margin_top = 90
custom_constants/margin_left = 165
custom_constants/margin_bottom = 90
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuContainer"]
margin_left = 165.0
margin_top = 90.0
margin_right = 475.0
margin_bottom = 270.0
custom_styles/panel = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer"]
margin_left = 12.0
margin_top = 13.0
margin_right = 297.0
margin_bottom = 167.0
alignment = 1

[node name="Label" type="Label" parent="PauseMenuContainer/PanelContainer/VBoxContainer"]
margin_right = 285.0
margin_bottom = 48.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
text = "Pause"
align = 1
valign = 1

[node name="Control" type="Control" parent="PauseMenuContainer/PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 285.0
margin_bottom = 77.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 285.0
margin_bottom = 154.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="ButtonCredits" type="Button" parent="PauseMenuContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_left = 75.0
margin_top = 9.0
margin_right = 210.0
margin_bottom = 34.0
rect_min_size = Vector2( 135, 0 )
size_flags_horizontal = 4
text = "Credits"
script = ExtResource( 5 )

[node name="ButtonScreenshots" type="Button" parent="PauseMenuContainer/PanelContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_left = 75.0
margin_top = 29.0
margin_right = 210.0
margin_bottom = 54.0
rect_min_size = Vector2( 135, 0 )
size_flags_horizontal = 4
disabled = true
text = "Screenshots"
script = ExtResource( 5 )

[node name="ButtonQuit" type="Button" parent="PauseMenuContainer/PanelContainer/VBoxContainer/VBoxContainer"]
margin_left = 75.0
margin_top = 38.0
margin_right = 210.0
margin_bottom = 63.0
rect_min_size = Vector2( 135, 0 )
size_flags_horizontal = 4
text = "Quit"
script = ExtResource( 5 )

[node name="CreditsContainer" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PauseMenuContainer/PanelContainer/VBoxContainer/VBoxContainer/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="PauseMenuContainer/PanelContainer/VBoxContainer/VBoxContainer/ButtonScreenshots" to="." method="_on_ButtonScreenshots_pressed"]
[connection signal="pressed" from="PauseMenuContainer/PanelContainer/VBoxContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
